operacje na zenith i azimuth

--- a/AirQuality.ipynb
+++ b/AirQuality.ipynb
@@ -191,7 +191,7 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "### 1. Uzupełnienie wartości brakujących",
+   "source": "### 1. Imputacja, usuwanie kolumn, oraz inne cuda",
    "id": "ba2f9b8e1bcb96ad"
   },
   {
@@ -239,6 +239,16 @@
     "    upper_t = matrix.where(np.triu(np.ones_like(matrix, dtype=np.bool_), k=1))\n",
     "    return [col for col in upper_t.columns if any(upper_t[col] > 0.99)]\n",
     "\n",
+    "def subract_azimuth_zenith(dataframe):\n",
+    "    zenith_columns = [zenith for zenith in dataframe.columns if 'zenith' in zenith]\n",
+    "    azimuth_columns = [azimuth for azimuth in dataframe.columns if 'azimuth' in azimuth]\n",
+    "    for i, zenith in enumerate(zenith_columns):\n",
+    "        splitted = zenith.split('_')\n",
+    "        dataframe[f'{splitted[0]}_{splitted[1]}_diff'] = dataframe[zenith] - dataframe[azimuth_columns[i]]\n",
+    "        dataframe.drop(zenith_columns[i], axis=1, inplace=True)\n",
+    "        dataframe.drop(azimuth_columns[i], axis=1, inplace=True)\n",
+    "    return dataframe\n",
+    "        \n",
     "\n",
     "test_ids = test['id']\n",
     "train.drop(columns=['id', 'city', 'country', 'site_id', 'date'], inplace=True)\n",
@@ -253,9 +263,18 @@
     "X, test = drop_high_nans(X), drop_high_nans(test)\n",
     "# fill_train(), fill_test()\n",
     "# to_drop = drop_high_correlated_columns()\n",
-    "# X, test = X.drop(columns=to_drop, axis=1), test.drop(columns=to_drop, axis=1)"
+    "# X, test = X.drop(columns=to_drop, axis=1), test.drop(columns=to_drop, axis=1)\n",
+    "X, test = subract_azimuth_zenith(X), subract_azimuth_zenith(test)"
    ],
-   "id": "133fbc1ffe6ae43a",
+   "id": "c852fd48eaca68bd",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "X.info()",
+   "id": "29f02e7df806f5f1",
    "outputs": [],
    "execution_count": null
   },
@@ -438,7 +457,7 @@
     "# \n",
     "# X = pd.concat([pd.DataFrame(scaler.fit_transform(X[scale_columns]), columns=scaler.feature_names_in_), X_cat], axis=1)\n",
     "# test = pd.concat([pd.DataFrame(scaler.transform(test[scale_columns]), columns=scaler.feature_names_in_), test_cat], axis=1)\n",
-    "# Wszyskie kolumny\n",
+    "# Wszystkie kolumny\n",
     "scaler = StandardScaler()\n",
     "\n",
     "X = scaler.fit_transform(X, y)\n",
@@ -690,7 +709,7 @@
     "           }\n",
     "# lgbm = lgb.LGBMRegressor(**params_12)\n",
     "lgbm = define_lightgbm_model(study.best_trial)\n",
-    "lgbm.fit(X_train, y_train)\n",
+    "lgbm.fit(X, y)\n",
     "model_params = ['num_leaves', 'max_depth', 'learning_rate', 'n_estimators', 'subsample', 'colsample_bytree', 'min_data_in_leaf', 'bagging_fraction']"
    ],
    "id": "d068d85105ef8d8",
