wprowadzenie do stackingu

--- a/AirQuality.ipynb
+++ b/AirQuality.ipynb
@@ -198,8 +198,7 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "from sklearn.experimental import enable_iterative_imputer\n",
-    "from sklearn.impute import IterativeImputer, KNNImputer\n",
+    "from sklearn.impute import KNNImputer\n",
     "\n",
     "\n",
     "def fill_train(column_name='site_latitude'):\n",
@@ -258,13 +257,12 @@
     "starts_with = starts_with[0].tolist()\n",
     "\n",
     "imputers = [KNNImputer(n_neighbors=15, weights='distance') for _ in range(len(starts_with))]\n",
-    "# imputers = [IterativeImputer() for _ in range(len(starts_with))]\n",
     "X, y = train.drop(['pm2_5'], axis=1), train['pm2_5']\n",
     "X, test = drop_high_nans(X), drop_high_nans(test)\n",
     "# fill_train(), fill_test()\n",
     "# to_drop = drop_high_correlated_columns()\n",
     "# X, test = X.drop(columns=to_drop, axis=1), test.drop(columns=to_drop, axis=1)\n",
-    "X, test = subract_azimuth_zenith(X), subract_azimuth_zenith(test)"
+    "# X, test = subract_azimuth_zenith(X), subract_azimuth_zenith(test)"
    ],
    "id": "c852fd48eaca68bd",
    "outputs": [],
@@ -305,15 +303,10 @@
     "            for j, column in enumerate(similar_columns):\n",
     "                x_cord, y_cord = divmod(j, cols)\n",
     "                train[column].plot(kind='box', ax=ax[x_cord, y_cord], fontsize=15)\n",
-    "                if column in ver.keys():\n",
-    "                    ax[x_cord, y_cord].axhline(y=ver.get(column)[0] * train[column].std(), color='green', label='down-limit')\n",
-    "                    ax[x_cord, y_cord].axhline(y=ver.get(column)[1] * train[column].std(), color='red', label='up-limit')\n",
-    "                    ax[x_cord, y_cord].legend(loc='best')\n",
     "            plt.show()\n",
     "\n",
     "\n",
     "vertical_columns = [col for col in X.columns if 'number_density' in col]\n",
-    "ver = dict(zip(vertical_columns, [(-5 * X[column].std(), 5 * X[column].std()) for column in vertical_columns]))\n",
     "\n",
     "# plot_boxplots()"
    ],
@@ -518,120 +511,6 @@
    "execution_count": null
   },
   {
-   "cell_type": "markdown",
-   "source": "### Wybór karty graficznej dla PyTorcha",
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "aaf607cc44710975"
-  },
-  {
-   "cell_type": "code",
-   "source": [
-    "import torch\n",
-    "from torch import nn, optim\n",
-    "from torch.utils.data import DataLoader\n",
-    "\n",
-    "\n",
-    "# device = (\n",
-    "#     'cuda'\n",
-    "#     if torch.cuda.is_available()\n",
-    "#     else 'mps'\n",
-    "#     if torch.backends.mps.is_available()\n",
-    "#     else 'cpu'\n",
-    "# )\n",
-    "# \n",
-    "# X_train_tensor = torch.tensor(X_train, device=device, dtype=torch.float)\n",
-    "# X_test_tensor = torch.tensor(X_test, device=device, dtype=torch.float)\n",
-    "# y_train_tensor = torch.tensor(y_train.to_numpy(), device=device, dtype=torch.float)\n",
-    "# y_test_tensor = torch.tensor(y_test.to_numpy(), device=device, dtype=torch.float)\n",
-    "# test_tensor = torch.tensor(test, device=device, dtype=torch.float)"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "e1ea7f2091127d19",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "markdown",
-   "source": "### Optuna + Pytorch",
-   "id": "6784e54b9ac8486f"
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": [
-    "# def rmse_loss(y_true, y_pred):\n",
-    "#     return torch.sqrt(torch.mean((y_true - y_pred) ** 2))\n",
-    "# \n",
-    "# def define_model(trial):\n",
-    "#     n_layers = trial.suggest_int('n_layers', 2, 5)\n",
-    "#     layers = []\n",
-    "#     \n",
-    "#     in_features = X_train_tensor.shape[1]\n",
-    "#     for i in range(n_layers):\n",
-    "#         out_features = trial.suggest_int(f'layer{i}', 25, 200)\n",
-    "#         layers.append(nn.Linear(in_features, out_features))\n",
-    "#         layers.append(getattr(torch.nn, trial.suggest_categorical(f'nn_{i}', ['ReLU', 'Sigmoid', 'Tanh']))())\n",
-    "#         layers.append(nn.Dropout(trial.suggest_float(f'dropout{i}', 0.1, 0.6)))\n",
-    "#         in_features = out_features\n",
-    "#     layers.append(nn.Linear(in_features, 1))\n",
-    "#     return nn.Sequential(*layers)\n",
-    "# \n",
-    "# def objective(trial):\n",
-    "#     model = define_model(trial).to(device=device)\n",
-    "#     lr = trial.suggest_float('lr', 1e-4, 1e-2)\n",
-    "#     weight_decay = trial.suggest_float('weight_decay', 1e-5, 1e-4)\n",
-    "#     betas = (trial.suggest_float('beta1', 0.8, 0.9), trial.suggest_float('beta2', 0.997, 0.999))\n",
-    "#     optimizer = optim.Adam(model.parameters(), lr=lr, weight_decay=weight_decay, betas=betas, fused=True)\n",
-    "#     \n",
-    "#     batch_size = trial.suggest_int('batch_size', 16, 416, step=25)\n",
-    "#     criterion = rmse_loss\n",
-    "#     epochs = trial.suggest_int('epochs', 100, 300, step=50)\n",
-    "#     \n",
-    "#     final_train_tensor = torch.concat((X_train_tensor, y_train_tensor.unsqueeze(dim=1)), dim=1)\n",
-    "#     dataset = DataLoader(final_train_tensor, batch_size=batch_size, shuffle=True)\n",
-    "#     \n",
-    "#     model.train()\n",
-    "#     \n",
-    "#     for epoch in range(epochs):\n",
-    "#         epoch_loss = 0\n",
-    "#         for batch_idx, batch in enumerate(dataset):\n",
-    "#             inputs, targets = batch[:, :-1], batch[:, -1]\n",
-    "#             batch_pred = model(inputs)\n",
-    "#             optimizer.zero_grad()\n",
-    "#             loss = criterion(targets, batch_pred.squeeze())\n",
-    "#             epoch_loss += loss.item()\n",
-    "#             loss.backward()\n",
-    "#             optimizer.step()\n",
-    "#             \n",
-    "#         trial.report(epoch_loss / len(dataset), epoch)\n",
-    "#         if trial.should_prune():\n",
-    "#             raise optuna.exceptions.TrialPruned()\n",
-    "#         \n",
-    "#     model.eval()\n",
-    "#     \n",
-    "#     with torch.no_grad():\n",
-    "#         y_pred = model(X_test_tensor).squeeze()\n",
-    "#         \n",
-    "#     return root_mean_squared_error(y_test, y_pred.numpy(force=True))\n",
-    "# \n",
-    "# study = optuna.create_study(\n",
-    "#     direction='minimize',\n",
-    "#     sampler=optuna.samplers.TPESampler(),\n",
-    "#     study_name='AirQuality',\n",
-    "# )\n",
-    "# study.optimize(objective, n_trials=200)\n",
-    "# model_params = ['lr', 'n_layers', 'weight_decay', 'beta1', 'beta2', 'epochs', 'batch_size']"
-   ],
-   "id": "a612d991969930d6",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
    "metadata": {},
    "cell_type": "markdown",
    "source": "### <center>Optuna + lightGBM</center>",
@@ -650,15 +529,15 @@
     "        'objective': 'root_mean_squared_error',\n",
     "        'boosting_type': 'gbdt',\n",
     "        'num_leaves': trial.suggest_int('num_leaves', 2, 50),\n",
-    "        'max_depth': trial.suggest_int('max_depth', 15, 25),\n",
-    "        'learning_rate': trial.suggest_float('learning_rate', 8e-3, 5e-2),\n",
+    "        'max_depth': trial.suggest_int('max_depth', 10, 17),\n",
+    "        'learning_rate': trial.suggest_float('learning_rate', 8e-3, 5e-2, log=True),\n",
     "        'n_estimators': trial.suggest_int('n_estimators', 900, 1100),\n",
     "        'tree_learner': 'voting',\n",
     "        'bagging_fraction': trial.suggest_float('bagging_fraction', 0.5, 0.9),\n",
     "        'subsample': trial.suggest_float('subsample', 0.5, 1),\n",
     "        'colsample_bytree': trial.suggest_float('colsample_bytree', 0.3, 1),\n",
     "        'min_data_in_leaf': trial.suggest_int('min_data_in_leaf', 50, 150),\n",
-    "        'min_gain_to_split': trial.suggest_float('min_gain_to_split', 1e-8, 1, log=True),\n",
+    "        'reg_lambda': trial.suggest_float('reg_lambda', 1e-4, 1, log=True),\n",
     "        'bagging_freq': 1,\n",
     "        'device': 'cpu',\n",
     "        'n_jobs': -1,\n",
@@ -670,11 +549,18 @@
     "def objective_lightgbm(trial):\n",
     "    model = define_lightgbm_model(trial)\n",
     "    model.fit(X_train, y_train)\n",
-    "    y_pred = model.predict(X_test)\n",
-    "    return root_mean_squared_error(y_test, y_pred)\n",
-    "\n",
-    "study = optuna.create_study(direction='minimize', study_name='AirQualityWithLightGBM', sampler=optuna.samplers.TPESampler(seed=0))\n",
-    "study.optimize(objective_lightgbm, n_trials=500)"
+    "    return root_mean_squared_error(y_test, model.predict(X_test))"
+   ],
+   "id": "e0c6cfa75b097d58",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "study_lightgbm = optuna.create_study(direction='minimize', study_name='AirQualityWithLightGBM', sampler=optuna.samplers.TPESampler(seed=0))\n",
+    "study_lightgbm.optimize(objective_lightgbm, n_trials=200)"
    ],
    "id": "21e4f067899ca658",
    "outputs": [],
@@ -708,9 +594,10 @@
     "            'boosting_type': 'gbdt',\n",
     "           }\n",
     "# lgbm = lgb.LGBMRegressor(**params_12)\n",
-    "lgbm = define_lightgbm_model(study.best_trial)\n",
-    "lgbm.fit(X, y)\n",
-    "model_params = ['num_leaves', 'max_depth', 'learning_rate', 'n_estimators', 'subsample', 'colsample_bytree', 'min_data_in_leaf', 'bagging_fraction']"
+    "lgbm = define_lightgbm_model(study_lightgbm.best_trial)\n",
+    "lgbm.fit(X_train, y_train)\n",
+    "lightgbm_params = ['num_leaves', 'max_depth', 'learning_rate', 'n_estimators', 'subsample', 'colsample_bytree', 'min_data_in_leaf', 'bagging_fraction']\n",
+    "root_mean_squared_error(y_test, lgbm.predict(X_test))"
    ],
    "id": "d068d85105ef8d8",
    "outputs": [],
@@ -718,11 +605,69 @@
   },
   {
    "metadata": {},
+   "cell_type": "markdown",
+   "source": "### <center>Optuna + XGBoost</center>",
+   "id": "ec02be0608d9aff4"
+  },
+  {
+   "metadata": {},
    "cell_type": "code",
-   "source": "root_mean_squared_error(y_test, lgbm.predict(X_test))",
-   "id": "cd0b3f5d0214f227",
    "outputs": [],
-   "execution_count": null
+   "execution_count": null,
+   "source": [
+    "import xgboost as xgb\n",
+    "\n",
+    "def define_xgb_model(trial):\n",
+    "    params = {\n",
+    "        'objective': 'reg:squarederror',\n",
+    "        'n_estimators': trial.suggest_int('n_estimators', 100, 1000),\n",
+    "        'subsample': trial.suggest_float('subsample', 0.8, 0.9),\n",
+    "        'reg_lambda': trial.suggest_float('reg_lambda', 1e-4, 1, log=True),\n",
+    "        'eta': trial.suggest_float('eta', 1e-3, 1e-1, log=True),\n",
+    "        'max_depth': trial.suggest_int('max_depth', 6, 15),\n",
+    "        'colsample_bytree': trial.suggest_float('colsample_bytree', 1e-3, 1),\n",
+    "        'verbosity': 0,\n",
+    "        'nthread': 8\n",
+    "    }\n",
+    "    return xgb.XGBRegressor(**params)\n",
+    "\n",
+    "def objective_xgb(trial):\n",
+    "    model = define_xgb_model(trial)\n",
+    "    model.fit(X_train, y_train)\n",
+    "    return root_mean_squared_error(y_test, model.predict(X_test))"
+   ],
+   "id": "752b9e00b8c5beaf"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "study_xgboost = optuna.create_study(direction='minimize', study_name='AirQualityWithXGBoost', sampler=optuna.samplers.TPESampler(seed=0))\n",
+    "study_xgboost.optimize(objective_xgb, n_trials=100)"
+   ],
+   "id": "dec6fe41d008823"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Zdefiniowanie najlepszego XGBoost",
+   "id": "5ac159f7995c8fa3"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "xgbm = define_xgb_model(study_xgboost.best_trial)\n",
+    "\n",
+    "xgbm.fit(X_train, y_train)\n",
+    "xgboost_params = ['n_estimators', 'subsample', 'reg_lambda', 'eta', 'max_depth', 'colsample_bytree']\n",
+    "root_mean_squared_error(y_test, xgbm.predict(X_test))"
+   ],
+   "id": "7014455ebd0fe1fb"
   },
   {
    "metadata": {},
@@ -733,10 +678,18 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "optuna.visualization.plot_optimization_history(study)",
-   "id": "8f7608eef0ccc810",
    "outputs": [],
-   "execution_count": null
+   "execution_count": null,
+   "source": "optuna.visualization.plot_optimization_history(study_lightgbm)",
+   "id": "8f7608eef0ccc810"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "optuna.visualization.plot_optimization_history(study_xgboost)",
+   "id": "6c46095f2acaab38"
   },
   {
    "metadata": {},
@@ -747,10 +700,18 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "optuna.visualization.plot_slice(study, params=model_params)",
-   "id": "8142b6308c8970fe",
    "outputs": [],
-   "execution_count": null
+   "execution_count": null,
+   "source": "optuna.visualization.plot_slice(study_lightgbm, params=lightgbm_params)",
+   "id": "8142b6308c8970fe"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "optuna.visualization.plot_slice(study_xgboost, params=study_xgboost)",
+   "id": "18af851693dfb93f"
   },
   {
    "metadata": {},
@@ -761,10 +722,18 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "optuna.visualization.plot_param_importances(study)",
-   "id": "6594be3641ad58f2",
    "outputs": [],
-   "execution_count": null
+   "execution_count": null,
+   "source": "optuna.visualization.plot_param_importances(study_lightgbm)",
+   "id": "6594be3641ad58f2"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "optuna.visualization.plot_param_importances(study_xgboost)",
+   "id": "f2eeb8146c21cc6b"
   },
   {
    "metadata": {},
@@ -775,10 +744,18 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "study.best_params",
-   "id": "d4341655723aa9d3",
    "outputs": [],
-   "execution_count": null
+   "execution_count": null,
+   "source": "study_lightgbm.best_params",
+   "id": "d4341655723aa9d3"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "study_xgboost.best_params",
+   "id": "25df2c67d7ad7ae"
   },
   {
    "metadata": {},
@@ -789,10 +766,10 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "lgb.plot_importance(lgbm, figsize=(20, 12), dpi=200)",
-   "id": "5a463c177c2dea71",
    "outputs": [],
-   "execution_count": null
+   "execution_count": null,
+   "source": "lgb.plot_importance(lgbm, figsize=(20, 12), dpi=200)",
+   "id": "5a463c177c2dea71"
   },
   {
    "metadata": {},
@@ -803,72 +780,10 @@
   {
    "metadata": {},
    "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
    "source": "lgb.plot_tree(lgbm, precision=2, figsize=(20, 12), show_info=['data_percentage'], dpi=200, orientation='vertical')",
-   "id": "bd6ab8ed5c9e4833",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "markdown",
-   "source": "### <center>Optuna + RandomForestRegressor</center>",
-   "id": "ec02be0608d9aff4"
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": [
-    "def define_rfr_model(trial):\n",
-    "    params = {\n",
-    "        'n_estimators': trial.suggest_int('n_estimators', 500, 900),\n",
-    "        'max_depth': trial.suggest_int('max_depth', 5, 15),\n",
-    "        'min_samples_split': trial.suggest_int('min_samples_split', 10, 50),\n",
-    "        'min_samples_leaf': trial.suggest_int('min_samples_leaf', 10, 50),\n",
-    "        'bootstrap': trial.suggest_categorical('bootstrap', [True]),\n",
-    "        'oob_score': trial.suggest_categorical('oob_score', [True, False]),\n",
-    "        'warm_start': trial.suggest_categorical('warm_start', [True, False]),\n",
-    "        'random_state': 4,\n",
-    "        'n_jobs': -1,\n",
-    "    }\n",
-    "    return RandomForestRegressor(**params)\n",
-    "\n",
-    "def objective_rfr(trial):\n",
-    "    model = define_rfr_model(trial)\n",
-    "    model.fit(X_train, y_train)\n",
-    "    y_pred = model.predict(X_test)\n",
-    "    return root_mean_squared_error(y_test, y_pred)\n",
-    "\n",
-    "study = optuna.create_study(direction='minimize', study_name='AirQualityWithRandomForestRegressor', sampler=optuna.samplers.TPESampler(seed=0))\n",
-    "study.optimize(objective_rfr, n_trials=200)"
-   ],
-   "id": "dec6fe41d008823",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "markdown",
-   "source": "### Zdefiniowanie najlepszego RandomForestRegressor",
-   "id": "5ac159f7995c8fa3"
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": [
-    "rfr = define_rfr_model(study.best_trial)\n",
-    "rfr.fit(X_train, y_train)"
-   ],
-   "id": "7014455ebd0fe1fb",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": "root_mean_squared_error(y_test, rfr.predict(X_test))",
-   "id": "ebac26f4a1b5aadf",
-   "outputs": [],
-   "execution_count": null
+   "id": "bd6ab8ed5c9e4833"
   },
   {
    "metadata": {},
@@ -915,13 +830,13 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "### RandomForestRegressor",
+   "source": "### XGBoost",
    "id": "d60e353a6810059b"
   },
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "save_to_csv(rfr.predict(test), 'rfr.csv')",
+   "source": "save_to_csv(xgbm.predict(test), 'xgb.csv')",
    "id": "2293fbf00cd34490",
    "outputs": [],
    "execution_count": null
