stacking lightGBM + XGBoost

--- a/AirQuality.ipynb
+++ b/AirQuality.ipynb
@@ -612,8 +612,6 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "import xgboost as xgb\n",
     "\n",
@@ -636,18 +634,20 @@
     "    model.fit(X_train, y_train)\n",
     "    return root_mean_squared_error(y_test, model.predict(X_test))"
    ],
-   "id": "752b9e00b8c5beaf"
+   "id": "752b9e00b8c5beaf",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "study_xgboost = optuna.create_study(direction='minimize', study_name='AirQualityWithXGBoost', sampler=optuna.samplers.TPESampler(seed=0))\n",
     "study_xgboost.optimize(objective_xgb, n_trials=100)"
    ],
-   "id": "dec6fe41d008823"
+   "id": "dec6fe41d008823",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -658,8 +658,6 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "xgbm = define_xgb_model(study_xgboost.best_trial)\n",
     "\n",
@@ -667,7 +665,9 @@
     "xgboost_params = ['n_estimators', 'subsample', 'reg_lambda', 'eta', 'max_depth', 'colsample_bytree']\n",
     "root_mean_squared_error(y_test, xgbm.predict(X_test))"
    ],
-   "id": "7014455ebd0fe1fb"
+   "id": "7014455ebd0fe1fb",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -678,18 +678,18 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": "optuna.visualization.plot_optimization_history(study_lightgbm)",
-   "id": "8f7608eef0ccc810"
+   "id": "8f7608eef0ccc810",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": "optuna.visualization.plot_optimization_history(study_xgboost)",
-   "id": "6c46095f2acaab38"
+   "id": "6c46095f2acaab38",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -700,18 +700,18 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": "optuna.visualization.plot_slice(study_lightgbm, params=lightgbm_params)",
-   "id": "8142b6308c8970fe"
+   "id": "8142b6308c8970fe",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
    "cell_type": "code",
+   "source": "optuna.visualization.plot_slice(study_xgboost, params=xgboost_params)",
+   "id": "18af851693dfb93f",
    "outputs": [],
-   "execution_count": null,
-   "source": "optuna.visualization.plot_slice(study_xgboost, params=study_xgboost)",
-   "id": "18af851693dfb93f"
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -722,18 +722,18 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": "optuna.visualization.plot_param_importances(study_lightgbm)",
-   "id": "6594be3641ad58f2"
+   "id": "6594be3641ad58f2",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": "optuna.visualization.plot_param_importances(study_xgboost)",
-   "id": "f2eeb8146c21cc6b"
+   "id": "f2eeb8146c21cc6b",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -744,18 +744,18 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": "study_lightgbm.best_params",
-   "id": "d4341655723aa9d3"
+   "id": "d4341655723aa9d3",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": "study_xgboost.best_params",
-   "id": "25df2c67d7ad7ae"
+   "id": "25df2c67d7ad7ae",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -766,10 +766,10 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": "lgb.plot_importance(lgbm, figsize=(20, 12), dpi=200)",
-   "id": "5a463c177c2dea71"
+   "id": "5a463c177c2dea71",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -780,10 +780,35 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": "lgb.plot_tree(lgbm, precision=2, figsize=(20, 12), show_info=['data_percentage'], dpi=200, orientation='vertical')",
-   "id": "bd6ab8ed5c9e4833"
+   "id": "bd6ab8ed5c9e4833",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### <center>Stacking</center>",
+   "id": "9530ac71fc2066ec"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "from sklearn.svm import SVR\n",
+    "\n",
+    "X_data = np.column_stack((lgbm.predict(X_test), xgbm.predict(X_test)))\n",
+    "\n",
+    "meta_model = SVR()\n",
+    "meta_model.fit(X_data, y_test)\n",
+    "\n",
+    "lgbm_final, xgbm_final = lgbm.predict(test), xgbm.predict(test)\n",
+    "\n",
+    "X_final_test = np.column_stack((lgbm_final, xgbm_final))"
+   ],
+   "id": "407b4556b6d8c01",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -794,35 +819,13 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "### Pytorch",
-   "id": "f8dbc488d410fc79"
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": [
-    "# best_model = define_model(study.best_trial)\n",
-    "# best_model.to(device=device)\n",
-    "# \n",
-    "# best_model.eval()\n",
-    "# \n",
-    "# with torch.no_grad():\n",
-    "#     save_to_csv(best_model(test_tensor).squeeze().numpy(force=True), 'nn.csv')"
-   ],
-   "id": "701718bf3900dab9",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "markdown",
    "source": "### lightGBM",
    "id": "b18a5c8404b9bf18"
   },
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "save_to_csv(lgbm.predict(test), 'lightgbm.csv')",
+   "source": "save_to_csv(lgbm_final, 'lightgbm.csv')",
    "id": "74ce5044d06598de",
    "outputs": [],
    "execution_count": null
@@ -836,8 +839,22 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "save_to_csv(xgbm.predict(test), 'xgb.csv')",
+   "source": "save_to_csv(xgbm_final, 'xgb.csv')",
    "id": "2293fbf00cd34490",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Stack lightGBM + XGBoost",
+   "id": "71aae32f34f8daa0"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "save_to_csv(meta_model.predict(X_final_test), 'stack_lightGBM_xgb.csv')",
+   "id": "1ce4300d33f4fa61",
    "outputs": [],
    "execution_count": null
   },
