jest jakis potencjal

--- a/AirQuality.ipynb
+++ b/AirQuality.ipynb
@@ -333,7 +333,7 @@
     "    zscores = np.absolute(zscores)\n",
     "    result = np.mean(zscores, axis=1)\n",
     "    indexes_to_drop = []\n",
-    "    q1, q2 = np.quantile(result, 0.005), np.quantile(result, 0.995)\n",
+    "    q1, q2 = np.quantile(result, 0.001), np.quantile(result, 0.999)\n",
     "    for i, el in enumerate(result):\n",
     "        if q1 <= el >= q2:\n",
     "            indexes_to_drop.append(i)\n",
@@ -343,7 +343,7 @@
     "    y.reset_index(drop=True, inplace=True)\n",
     "\n",
     "\n",
-    "# del_outliers()\n",
+    "del_outliers()\n",
     "\n",
     "X.info()"
    ],
@@ -499,16 +499,26 @@
    "id": "9831b50f952a24eb"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-18T19:27:08.361640Z",
+     "start_time": "2024-05-18T19:27:08.357079Z"
+    }
+   },
    "cell_type": "code",
    "source": [
+    "import os\n",
+    "\n",
+    "\n",
     "def save_to_csv(y_pred, save_as):\n",
+    "    if 'result' not in os.listdir(os.getcwd()):\n",
+    "        os.mkdir('result')\n",
     "    final_df = pd.concat([test_ids, pd.DataFrame.from_dict({'pm2_5': y_pred})], axis=1)\n",
     "    final_df.to_csv(f'result\\\\{save_as}', index=False)"
    ],
    "id": "e9d2d344d5d30f55",
    "outputs": [],
-   "execution_count": null
+   "execution_count": 1
   },
   {
    "metadata": {},
@@ -559,7 +569,7 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "study_lightgbm = optuna.create_study(direction='minimize', study_name='AirQualityWithLightGBM', sampler=optuna.samplers.TPESampler(seed=0))\n",
+    "study_lightgbm = optuna.create_study(direction='minimize', study_name='AirQualityWithLightGBM', sampler=optuna.samplers.TPESampler())\n",
     "study_lightgbm.optimize(objective_lightgbm, n_trials=200)"
    ],
    "id": "21e4f067899ca658",
@@ -618,14 +628,14 @@
     "def define_xgb_model(trial):\n",
     "    params = {\n",
     "        'objective': 'reg:squarederror',\n",
-    "        'n_estimators': trial.suggest_int('n_estimators', 100, 1000),\n",
-    "        'subsample': trial.suggest_float('subsample', 0.8, 0.9),\n",
+    "        'n_estimators': trial.suggest_int('n_estimators', 500, 1000),\n",
+    "        'subsample': trial.suggest_float('subsample', 0.6, 0.9, log=True),\n",
     "        'reg_lambda': trial.suggest_float('reg_lambda', 1e-4, 1, log=True),\n",
     "        'eta': trial.suggest_float('eta', 1e-3, 1e-1, log=True),\n",
     "        'max_depth': trial.suggest_int('max_depth', 6, 15),\n",
-    "        'colsample_bytree': trial.suggest_float('colsample_bytree', 1e-3, 1),\n",
+    "        'colsample_bytree': trial.suggest_float('colsample_bytree', 1e-3, 1, log=True),\n",
     "        'verbosity': 0,\n",
-    "        'nthread': 8\n",
+    "        'nthread': -1\n",
     "    }\n",
     "    return xgb.XGBRegressor(**params)\n",
     "\n",
@@ -642,7 +652,7 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "study_xgboost = optuna.create_study(direction='minimize', study_name='AirQualityWithXGBoost', sampler=optuna.samplers.TPESampler(seed=0))\n",
+    "study_xgboost = optuna.create_study(direction='minimize', study_name='AirQualityWithXGBoost', sampler=optuna.samplers.CmaEsSampler())\n",
     "study_xgboost.optimize(objective_xgb, n_trials=100)"
    ],
    "id": "dec6fe41d008823",
@@ -795,11 +805,11 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "from sklearn.svm import SVR\n",
+    "from sklearn.linear_model import LinearRegression\n",
     "\n",
     "X_data = np.column_stack((lgbm.predict(X_test), xgbm.predict(X_test)))\n",
     "\n",
-    "meta_model = SVR()\n",
+    "meta_model = LinearRegression()\n",
     "meta_model.fit(X_data, y_test)\n",
     "\n",
     "lgbm_final, xgbm_final = lgbm.predict(test), xgbm.predict(test)\n",
@@ -853,7 +863,7 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "save_to_csv(meta_model.predict(X_final_test), 'stack_lightGBM_xgb.csv')",
+   "source": "save_to_csv(meta_model.predict(X_final_test), 'stack_lgb_xgb.csv')",
    "id": "1ce4300d33f4fa61",
    "outputs": [],
    "execution_count": null
